Fix ranking alignment.

--- a/resources/public/lein-survey.css
+++ b/resources/public/lein-survey.css
@@ -2,7 +2,7 @@ html, body {
     background-color: #eee;
 }
 body {
-    padding-top: 40px;
+    padding-top: 20px;
 }
 .content {
     background-color: #fff;
@@ -18,6 +18,27 @@ body {
     padding: 20px;
 }
 
-.float {
-    float: left;
+li.ranking {
+    clear: both;
+    color: black;
+    list-style-type: none;
+}
+
+.rank li {
+    padding: 1em;
+    display: inline;
+    list-style-type: none;
+}
+
+.rank label {
+    width: 3em;
+}
+
+.rank span {
+    padding-left: 0.5em;
+}
+
+p.question {
+    margin-top: 1em;
+    font-weight: bold;
 }
